--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 10px;
 }
+h1,h2,h3{
+  margin:0;
+  font-size:1.3rem;
+}
+ul{
+  list-style: none;
+  padding-inline-start: 0;
+}
